<resources>
    <string name="app_name">阅读L</string>
    <string name="app_name_a">阅读L·A</string>
    <string name="receiving_shared_label">Legado·search</string>
    <string name="tip_perm_request_storage">Legado needs storage access to find and read books. please go "App Settings" to allow "Storage permission".</string>
    <string name="menu_backup">Home</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_import_old">Import Legado data</string>
    <string name="webdav_cache_backup">Offline cache book backup</string>
    <string name="webdav_cache_backup_s">Export to local and back up to the exports directory under the legado folder</string>
    <string name="backup_path">Backup to</string>
    <string name="select_backup_path">Please select a backup path.</string>
    <string name="menu_import_old_version">Import legacy data</string>
    <string name="menu_import_github">Import github data</string>
    <string name="menu_replace_rule">Replacement</string>
    <string name="menu_send">Send</string>
    <string name="dialog_title">Prompt</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_setting">Go to Settings</string>
    <string name="tip_cannot_jump_setting_page">Cannot jump to Settings.</string>
    <string name="manual_input">Manual Input</string>
    <string name="enter_directory_path">Enter directory path</string>
    <string name="invalid_directory">Invalid directory path</string>
    <string name="empty_directory_input">Directory path cannot be empty</string>
    <string name="dynamic_click_retry">Retry</string>
    <string name="dynamic_loading">Loading</string>
    <string name="draw">Warning</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_select_group">Delete Select Group</string>
    <string name="delete_all">Delete all</string>
    <string name="custom_export_section">Custom export chapter of epub</string>
    <string name="replace">Replace</string>
    <string name="replace_purify">Replacement</string>
    <string name="replace_purify_desc">Configure replacement rules</string>
    <string name="not_available">Not available now</string>
    <string name="enable">Enable</string>
    <string name="replace_purify_search">Search Replacement</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="in_favorites">in Favorites</string>
    <string name="out_favorites">Not in Favorites</string>
    <string name="rss">RSS feeds</string>
    <string name="all">All</string>
    <string name="recent_reading">Recent reading</string>
    <string name="last_read">Last reading</string>
    <string name="update_log">What\'s new</string>
    <string name="bookshelf_empty">The bookshelf is still empty. Search for books or add them from discovery!</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="layout_list">List</string>
    <string name="layout_grid3">Grid-3</string>
    <string name="layout_grid4">Grid-4</string>
    <string name="layout_grid5">Grid-5</string>
    <string name="layout_grid6">Grid-6</string>
    <string name="bookshelf_layout">Layout</string>
    <string name="view">View</string>
    <string name="book_library">Library</string>
    <string name="book_local">Import books</string>
    <string name="setting">Settings</string>
    <string name="theme_setting">Theme settings</string>
    <string name="theme_setting_s">Some settings related to interface or color</string>
    <string name="other_setting">Other settings</string>
    <string name="other_setting_s">Some function-related settings</string>
    <string name="about">About</string>
    <string name="donate">Donations</string>
    <string name="exit">Exit</string>
    <string name="exit_no_save">It has not been saved. Do you want to continue editing?</string>
    <string name="read_style">Book styles</string>
    <string name="version">Version</string>
    <string name="local">Local</string>
    <string name="search">Search</string>
    <string name="origin_format">Origin: %s</string>
    <string name="read_dur_progress">Origin: %s</string>
    <string name="book_name">Title</string>
    <string name="lasted_show">Latest: %s</string>
    <string name="check_add_bookshelf">Would you like to add %s to your Bookshelf?</string>
    <string name="import_books_count">%s text file(s) in total</string>
    <string name="is_loading">Loading…</string>
    <string name="retry">Retry</string>
    <string name="web_service">Web service</string>
    <string name="web_service_desc">Web edit source and read book</string>
    <string name="offline_cache">Offline cache</string>
    <string name="offline_cache_t">Offline cache</string>
    <string name="offline_cache_s">cache the selected chapter(s) to Storage</string>
    <string name="about_description">
        \u3000\u3000 This is an open source reading software newly developed by Kotlin, welcome to join us.
    </string>
    <string name="app_share_description">
        Legado (YueDu 3.0) download link：\n https://github.com/gedoor/legado/releases
    </string>
    <string name="version_name">Version %s</string>
    <string name="pt_auto_refresh">Auto-refresh</string>
    <string name="ps_auto_refresh">Update books automatically when opening the software</string>
    <string name="pt_auto_download">Auto-download</string>
    <string name="ps_auto_download">Download the latest chapters automatically  when updating books</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="web_dav_set">WebDav settings</string>
    <string name="web_dav_set_import_old">WebDav settings/Import legacy data</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_permission">Backup needs storage permission</string>
    <string name="restore_permission">Restore needs storage permission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="backup_confirmation">Backup confirmation</string>
    <string name="backup_message">The new backup files will replace the original.\n Backup folder: YueDu</string>
    <string name="restore_confirmation">Restore confirmation</string>
    <string name="restore_message">Restoring the bookshelf data will overwrite the current Bookshelf.</string>
    <string name="backup_success">Backup succeed</string>
    <string name="backup_fail">Backup failed\n%s</string>
    <string name="on_restore">Restoring</string>
    <string name="restore_success">Restore succeed</string>
    <string name="restore_fail">Backup failed</string>
    <string name="screen_direction">Screen orientation</string>
    <string name="screen_sensor">Auto(sensor)</string>
    <string name="screen_landscape">Landscape</string>
    <string name="screen_portrait">Portrait</string>
    <string name="screen_unspecified">Follow system</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="all_chapter_num">%d chapters</string>
    <string name="interface_setting">Interface</string>
    <string name="brightness">Brightness</string>
    <string name="chapter_list">Chapters</string>
    <string name="next_chapter">Next</string>
    <string name="previous_chapter">Prior</string>
    <string name="pt_hide_status_bar">Hide status bar</string>
    <string name="ps_hide_status_bar">Hide system navigation bar when reading</string>
    <string name="read_aloud">Speech</string>
    <string name="read_aloud_t">Speaking</string>
    <string name="read_aloud_s">Click to open the Reading</string>
    <string name="audio_play">Play</string>
    <string name="audio_play_t">Playing</string>
    <string name="audio_play_s">Click to open the Playing</string>
    <string name="audio_pause">Pause</string>
    <string name="text_return">Back</string>
    <string name="refresh">Refresh</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="set_timer">Timer</string>
    <string name="read_aloud_pause">Speak Paused</string>
    <string name="read_aloud_timer">Speaking(%d min left)</string>
    <string name="playing_timer">Playing(%d min left)</string>
    <string name="ps_hide_navigation_bar">Hide virtual buttons when reading</string>
    <string name="pt_hide_navigation_bar">Hide navigation bar</string>
    <string name="re_navigation_bar_color">Navigation bar color</string>
    <string name="scoring">Rating</string>
    <string name="send_mail">Email</string>
    <string name="can_not_open">Open failed</string>
    <string name="can_not_share">Share failed</string>
    <string name="no_chapter">No chapters</string>
    <string name="add_url">Add url</string>
    <string name="add_book_url">Add book url</string>
    <string name="background">Background</string>
    <string name="author">Author</string>
    <string name="author_show">Author: %s</string>
    <string name="aloud_stop">Speak Stopped</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_success">Cache cleared</string>
    <string name="action_save">Save</string>
    <string name="add_rss_source">Add RSS source</string>
    <string name="book_file_selector">Add books</string>
    <string name="copy_source">Copy source</string>
    <string name="paste_source">Paste source</string>
    <string name="check_update">Check for Updates</string>
    <string name="camera_scan">Scan QR code</string>
    <string name="scan_image">Scan local images</string>
    <string name="rule_summary">Rules description</string>
    <string name="share">Share</string>
    <string name="share_app">Share to</string>
    <string name="flow_sys">Follow system</string>
    <string name="add">Add</string>
    <string name="import_local">Import local</string>
    <string name="import_on_line">Import online</string>
    <string name="replace_rule_title">Replacement</string>
    <string name="replace_rule_edit">Edit replacement rule</string>
    <string name="replace_rule">Pattern</string>
    <string name="replace_to">Replacement</string>
    <string name="img_cover">Cover</string>
    <string name="book">Book</string>
    <string name="volume_key_page">Volume keys to turn page</string>
    <string name="mouse_wheel_page">Mouse wheel to turn page</string>
    <string name="click_turn_page">Tap screen to turn page</string>
    <string name="page_anim">Flip animation</string>
    <string name="book_page_anim">Flip animation (book)</string>
    <string name="disable_manga_page_anim">Disable flip animation</string>
    <string name="keep_light">Keep screen awake</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="adjust">Adjust</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="qr_share">QR code sharing</string>
    <string name="str_share">Strings sharing</string>
    <string name="help">Help</string>
    <string name="log">Log</string>
    <string name="tag_name">Tag name</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="auto_complete">Automatic completion</string>
    <string name="cookie">Clear cookie</string>
    <string name="server_config">Server Configuration</string>
    <string name="search_book_source">Search Book Source</string>
    <string name="login">Login</string>
    <string name="debug_source">Debug Source</string>
    <string name="check_source_config">Verify Config</string>
    <string name="check_source_timeout">Verify Timeout per Source (seconds)</string>
    <string name="set_source_variable">Set Source Variable</string>
</resources>