<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_login"
        android:title="@string/login"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_auto_complete"
        android:title="@string/auto_complete"
        app:showAsAction="never"
        android:checkable="true" />

    <item
        android:id="@+id/menu_debug_source"
        android:title="@string/debug_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_cookie"
        android:title="@string/cookie"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_qr_code_camera"
        android:title="@string/camera_scan"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share_qr"
        android:title="@string/qr_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_copy_source"
        android:title="@string/copy_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_paste_source"
        android:title="@string/paste_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share_str"
        android:title="@string/str_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_set_source_variable"
        android:title="@string/set_source_variable"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        app:showAsAction="never" />

</menu>