<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/actionBarStyle"
        app:title="@string/check_source_config"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <io.legado.app.ui.widget.text.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp">

                <io.legado.app.lib.theme.view.ThemeEditText
                    android:id="@+id/checkSourceTimeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/check_source_timeout"
                    android:inputType="number" />

            </io.legado.app.ui.widget.text.TextInputLayout>

            <io.legado.app.lib.theme.view.ThemeCheckBox
                android:id="@+id/checkSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/search_book_source" />

            <io.legado.app.lib.theme.view.ThemeCheckBox
                android:id="@+id/checkDiscovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="Discovery" />

            <io.legado.app.lib.theme.view.ThemeCheckBox
                android:id="@+id/checkInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="Info" />

            <io.legado.app.lib.theme.view.ThemeCheckBox
                android:id="@+id/checkCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="Category" />

            <io.legado.app.lib.theme.view.ThemeCheckBox
                android:id="@+id/checkContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="Content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:flexWrap="wrap"
        app:justifyContent="space_between">

        <io.legado.app.ui.widget.text.AccentTextView
            android:id="@+id/tv_footer_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <io.legado.app.ui.widget.text.AccentTextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/cancel" />

            <io.legado.app.ui.widget.text.AccentTextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/ok" />

        </LinearLayout>

    </com.google.android.flexbox.FlexboxLayout>
</LinearLayout>